--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "faiss-cpu>=1.11.0",
     "fastapi[standard]>=0.115.12",
+    "itsdangerous>=2.2.0",
     "jupyter>=1.1.1",
     "mail-parser>=4.1.2",
     "openai>=1.77.0",
