--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "apscheduler>=3.10.4",
     "faiss-cpu>=1.11.0",
     "fastapi[standard]>=0.115.12",
+    "imap-tools>=1.10.0",
     "itsdangerous>=2.2.0",
     "jupyter>=1.1.1",
     "mail-parser>=4.1.2",
